--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
         <!--Change the  URL here if working on an absolute domain-->
         <li><a href="{{ site.url }}">Home</a></li>
         <li><a href="{{ site.url }}/about">About</a></li>
-        {% if site.owner.github %}
-          <li><a href="{{ site.owner.github }}" target="_blank">Projects</a></li>
+        {% if site.owner.itchio %}
+          <li><a href="{{ site.owner.itchio }}" target="_blank">Projects</a></li>
         {% endif %}
         <li><a href="{{ site.url }}/feed.xml">RSS</a></li>
       </ul>
